--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "0.14.x",
     "react-dom": "0.14.x",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-translate-maker": "^0.2.3"
   },
   "devDependencies": {
     "nwb": "0.9.x"
