--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "nwb test --server"
   },
   "dependencies": {
+    "jquery": "^2.2.3",
     "react": "0.14.x",
     "react-dom": "0.14.x",
     "react-router": "^2.4.0",
